upgraded to JDK 20